--- a/Pac1_Facturacion/Facturacion/Entidades/Entidades.csproj
+++ b/Pac1_Facturacion/Facturacion/Entidades/Entidades.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="login.cs" />
+    <Compile Include="Producto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Usuarios.cs" />
   </ItemGroup>
