Avance Para Tarea Formulario Clientes
Avance Proyecto Formulario Clientes

--- a/Pac1_Facturacion/Facturacion/Datos/Datos.csproj
+++ b/Pac1_Facturacion/Facturacion/Datos/Datos.csproj
@@ -79,6 +79,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClientesDB.cs" />
     <Compile Include="ProductoDB.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UsuariosDB.cs" />
