--- a/Pac1_Facturacion/Facturacion/Entidades/Entidades.csproj
+++ b/Pac1_Facturacion/Facturacion/Entidades/Entidades.csproj
@@ -42,6 +42,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Clientes.cs" />
+    <Compile Include="DetalleFActura.cs" />
+    <Compile Include="Factura.cs" />
     <Compile Include="Login.cs" />
     <Compile Include="Producto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
