--- a/Pac1_Facturacion/Facturacion/Datos/Datos.csproj
+++ b/Pac1_Facturacion/Facturacion/Datos/Datos.csproj
@@ -80,6 +80,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClientesDB.cs" />
+    <Compile Include="FacturaDB.cs" />
     <Compile Include="ProductoDB.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UsuariosDB.cs" />
