--- a/Pac1_Facturacion/Facturacion/Vista/Vista.csproj
+++ b/Pac1_Facturacion/Facturacion/Vista/Vista.csproj
@@ -203,5 +203,8 @@
       <Name>Entidades</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\encabezado factura.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
