--- a/Web/web/Blazor/appsettings.json
+++ b/Web/web/Blazor/appsettings.json
@@ -6,5 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {"MySQL": "Server=localhost; Port=3306; Database=factura; Uid=root, Pwd=123456;"}
+  "ConnectionStrings": {"MySQL": "Server=localhost; Database=factura; Uid=root, Pwd=123456;"}
 }
