--- a/Web/web/Blazor/Blazor.csproj
+++ b/Web/web/Blazor/Blazor.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="CurrieTechnologies.Razor.SweetAlert2" Version="5.5.0" />
+    <PackageReference Include="Radzen.Blazor" Version="4.10.1" />
   </ItemGroup>
 
   <ItemGroup>
